--- a/book.tex
+++ b/book.tex
@@ -9,8 +9,9 @@
 \newcommand{\href}[2]{#2\footnote{#1}}
 \newcommand{\secref}[1]{Section~\ref{#1}}
 
-\newenvironment{challenge}[2]{\begin{quotation}\textbf{#1}\label{#2}}{\end{quotation}}
-\newenvironment{discussion}[2]{\begin{quotation}\textbf{#1}\label{#2}}{\end{quotation}}
+\newenvironment{callout}[2]{\begin{quotation}\textbf{Callout: {#1}}\label{#2}}{\end{quotation}}
+\newenvironment{challenge}[2]{\begin{quotation}\textbf{Challenge: {#1}}\label{#2}}{\end{quotation}}
+\newenvironment{discussion}[2]{\begin{quotation}\textbf{Discussion: {#1}}\label{#2}}{\end{quotation}}
 
 \title{A Short Guide to Teaching}
 \date{}
