--- a/carpentries.tex
+++ b/carpentries.tex
@@ -5,14 +5,13 @@ becoming part of a community of like-minded volunteers. This section
 provides some background on both organizations, and on the final steps
 toward certification.
 
-\begin{quote}
-\subsection{Preparation and Discussion}\label{preparation-and-discussion}
+\begin{callout}{Preparation and Discussion}{callout:preparation-and-discussion}
 
 This discussion assumes that trainees have read the operations
 guide (which is assigned as overnight homework). Instead of going through this material point by
 point, trainers should ask each trainee to add one non-overlapping
-question to a list, then go through that list. \{: .callout\}
-\end{quote}
+question to a list, then go through that list.
+\end{callout}
 
 \subsection{History}\label{history}
 
@@ -26,16 +25,14 @@ became an independent non-profit organization called the
 (SCF) in 2015. The SCF is now responsible for all aspects of Software
 Carpentry's operations.
 
-\begin{quote}
-\subsection{History Lesson}\label{history-lesson}
+\begin{callout}{History Lesson}{callout:history-lesson}
 
 For more on Software Carpentry's history, and on what we've learned
 along the way, see
 \href{http://software-carpentry.org/scf/history/}{this page} on its
 website or the paper
-``\href{http://f1000research.com/articles/3-62/v2}{Software Carpentry:
-Lessons Learned}''. \{: .callout\}
-\end{quote}
+``\href{http://f1000research.com/articles/3-62/v2}{Software Carpentry: Lessons Learned}''.
+\end{callout}
 
 In 2013, members of the Software Carpentry community identified a need
 for training aimed at computational novices that would teach researchers
@@ -180,8 +177,7 @@ instructors. The details of how you will reimburse the instructors needs
 to be established when the workshop is scheduled.
 \end{quote}
 
-\begin{quote}
-\subsection{Travel Costs for No-Shows}\label{travel-costs-for-no-shows}
+\begin{callout}{Travel Costs for No-Shows}{callout:travel-costs-for-no-shows}
 
 In order to protect its reputation, the SCF must do what it can to
 ensure that instructors actually show up for workshops they have agreed
@@ -200,8 +196,8 @@ person from future Software Carpentry activities.
 
 If an instructor fails to provide adequate notice of withdrawal more
 than once, the SCF reserves the right to suspend them from the list of
-recommended instructors. \{: .callout\}
-\end{quote}
+recommended instructors.
+\end{callout}
 
 \subsubsection{Materials}\label{materials}
 
@@ -210,8 +206,7 @@ available under a permissive open license. You may use
 them whenever and however you want, provided you cite the original
 source.
 
-\begin{quote}
-\subsection{What's Core?}\label{whats-core}
+\begin{callout}{What's Core?}{callout:whats-core}
 
 Our learners have such a wide spread of prior knowledge that no one
 fixed lesson could possibly fit everyone's needs. We have therefore
@@ -225,9 +220,9 @@ advanced classes. In particular:
   lesson, and which most instructors will skip.
 \item
   Most instructors only give learners one or two exercises per episode;
-  the other exercises are there for self-study. \{: .callout\}
+  the other exercises are there for self-study.
 \end{enumerate}
-\end{quote}
+\end{callout}
 
 \subsubsection{Using the Names}\label{using-the-names}
 
@@ -409,16 +404,15 @@ Carpentry discussion lists to find out if anyone is interested. If so,
 one person will typically take the lead and be the lesson's director and
 maintainer until it's ready to be taught.
 
-\begin{quote}
-\subsection{Many Ways to Contribute}\label{many-ways-to-contribute}
+\begin{callout}{Many Ways to Contribute}{callout:many-ways-to-contribute}
 
 We recognize that the medium of GitHub may be restrictive to those who
 wish to contribute to our lessons. We are always searching for ways to
 make the process more friendly to all, whether that be contribution
 training, or alternative routes to contribution. If you have any ideas
 how we might make contribution more contributor-friendly, please let us
-know. \{: .callout\}
-\end{quote}
+know.
+\end{callout}
 
 \subsubsection{Beyond Lessons}\label{beyond-lessons}
 
