--- a/guide.tex
+++ b/guide.tex
@@ -563,9 +563,7 @@ conference submission deadline if they kept doing things the way they
 always have. For these reasons, we have adopted a ``teach most
 immediately useful first'' approach described in \secref{s:motivation}.
 
-\begin{quote}
-\subsection{Software Carpentry Is Not Computer
-Science}\label{software-carpentry-is-not-computer-science}
+\begin{callout}{Software Carpentry Is Not Computer Science}{callout:software-carpentry-is-not-computer-science}
 
 Many of the foundational concepts of computer science, such as
 computability, inhabit the lower-right corner of the grid described
@@ -573,8 +571,7 @@ above. This does \emph{not} mean that they aren't important, or aren't
 worth learning, but if our aim is to convince people that they can learn
 this stuff, and that doing so will help them do more science faster,
 they are less compelling than things like automating repetitive tasks.
-\{: .callout\}
-\end{quote}
+\end{callout}
 
 \subsection{Logistics}\label{logistics}
 
@@ -769,18 +766,17 @@ practice? Are there any places where we are using the cognitivist
 ideas/techniques described later in the training?
 \end{discussion}
 
-\begin{quote}
-\subsection{Who Decides?}\label{who-decides}
+\begin{challenge}{Who Decides?}{chal:who-decides}
 
 In Littky and Grabelle's
-\emph{\href{http://www.amazon.com/Big-Picture-Education-Everyones-Business/dp/0871209713/}{The
-Big Picture: Education is Everyone's Business}}, Kenneth Wesson wrote,
+\textit{The Big Picture: Education is Everyone's Business} \cite{bib:littky-big-picture},
+Kenneth Wesson wrote,
 ``If poor inner-city children consistently outscored children from
 wealthy suburban homes on standardized tests, is anyone naive enough to
 believe that we would still insist on using these tests as indicators of
 success?'' What are examples in your own experience of ``objective''
-assessments that reinforce the status quo? \{: .challenge\}
-\end{quote}
+assessments that reinforce the status quo?
+\end{challenge}
 
 \subsection{Improvement}
 
@@ -966,8 +962,7 @@ want politicians, business leaders, and the general public to pay
 attention to our findings on climate change and drug-resistant diseases,
 it behooves us to try to meet those same standards ourselves.
 
-\begin{quote}
-\subsection{Evidence and Its Absence}\label{evidence-and-its-absence}
+\begin{callout}{Evidence and Its Absence}{callout:evidence-and-its-absence}
 
 As far as is practical, our teaching methods are based on the best
 available evidence. We wish we could say the same about our content, but
@@ -977,8 +972,7 @@ is the summary by Stefik et al of empirical research on the usability of
 programming languages \cite{bib:stefik-summary}
 (while
 their  full-length paper gives an idea of what's possible \cite{bib:stefik-fixme}).
-\{: .callout\}
-\end{quote}
+\end{callout}
 
 \subsection{Why We're Not a MOOC}\label{why-were-not-a-mooc}
 
