--- a/lessons.tex
+++ b/lessons.tex
@@ -345,8 +345,7 @@ This \emph{reverse instructional design} method helps keep teaching
 focused on its objectives. It also ensures that learners don't face
 anything on the final exam that the course hasn't prepared them for.
 
-\begin{quote}
-\subsection{How and Why to Fake It}\label{how-and-why-to-fake-it}
+\begin{callout}{How and Why to Fake It}{callout:how-and-why-to-fake-it}
 
 One of the most influential papers in the history of software
 engineering was Parnas and Clements'
@@ -360,8 +359,8 @@ if we did these steps one after another so that other people can retrace
 our steps. The same is true of lesson design: while we may change our
 mind about what we want to teach based on something that occurs to us
 while we're writing an MCQ, we want the notes we leave behind to present
-things in the order described above. \{: .callout\}
-\end{quote}
+things in the order described above.
+\end{callout}
 
 \begin{quote}
 \subsection{Teaching to the Test}\label{teaching-to-the-test}
@@ -392,8 +391,7 @@ productivity. \{: .solution\}
 \end{quote}
 \end{quote}
 
-\begin{quote}
-\subsection{The Minimal Manual}\label{the-minimal-manual}
+\begin{callout}{The Minimal Manual}{callout:the-minimal-manual}
 
 Carroll et al's 1987 paper
 ``The Minimal Manual'' \cite{bib:carroll-minimal-manual}
@@ -401,8 +399,8 @@ outlines an approach to documentation and instruction
 in which each lesson is one page long and describes how to accomplish
 one concrete task. Its focus on immediate application, error recognition
 and recovery, and reference use after training makes it an interesting
-model for Software and Data Carpentry. \{: .callout\}
-\end{quote}
+model for Software and Data Carpentry.
+\end{callout}
 
 \subsection{Software and Data Carpentry
 Lessons}\label{software-and-data-carpentry-lessons}
