--- a/memory.tex
+++ b/memory.tex
@@ -75,8 +75,7 @@ This metaphor helps explain many observed aspects of expert behavior:
   out-of-towner is, and how to get to their destination.}
 \end{enumerate}
 
-\begin{quote}
-\subsection{The J Word}\label{the-j-word}
+\begin{callout}{The J Word}{callout:the-j-word}
 
 Experts often betray their blind spot by using the word ``just'' in
 explanations, as in, ``Oh, it's easy, you just fire up a new virtual
@@ -86,8 +85,8 @@ problem.'' As we discuss later in \secref{sec:motivation},
 the J word (also sometimes called the passive dismissive
 adjective) is banned in our workshops, primarily because using it gives
 learners the very clear signal that the instructor thinks their problem
-is trivial and that they therefore must be stupid. \{: .callout\}
-\end{quote}
+is trivial and that they therefore must be stupid.
+\end{callout}
 
 The graph model of knowledge explains why helping learners make
 connections is as important as introducing them to facts. The more
@@ -97,9 +96,7 @@ the more likely the fact is to be remembered. This builds on our earlier
 idea of mental models - a mental model is a way to facilitate making
 connections between separate facts.
 
-\begin{quote}
-\subsection{Repetition vs.~Reflective
-Practice}\label{repetition-vs.reflective-practice}
+\begin{callout}{Repetition vs.~Reflective Practice}{callout:repetition-vs.reflective-practice}
 
 The idea that ten thousand hours of practice will make someone an expert
 in some field is widely known, but reality is much more complex. First,
@@ -115,8 +112,8 @@ variance in performance for games, 21\% for music, 18\% for sports, 4\%
 for education, and less than 1\% for professions.'' One explanation for
 this variation is that deliberate practice works best when the rules for
 evaluating success are very stable, but is less effective when there are
-more factors at play. \{: .callout\}
-\end{quote}
+more factors at play.
+\end{callout}
 
 \subsection{Concept Maps}\label{concept-maps}
 
@@ -130,9 +127,7 @@ connection, but by \emph{externalizing cognition} (i.e., making thought
 processes and mental models visible), concept maps help spark and focus
 discussion.
 
-\begin{quote}
-\subsection{There's More Than One Way to Do
-It}\label{theres-more-than-one-way-to-do-it}
+\begin{callout}{There's More Than One Way to Do It}{callout:theres-more-than-one-way-to-do-it}
 
 Concept maps are just one way to represent our understanding of a
 subject. Flowcharts, decision trees, and blueprints can be even more
@@ -141,8 +136,8 @@ useful in some contexts. For example,
 (taken from \href{http://extremepresentation.typepad.com/blog/2006/09/choosing\_a\_good.html}{a blog post}
 by Andrew Abela) is an excellent way to organize and present
 an understanding of how to choose the right kinds of chart for
-displaying different kinds of data. \{: .callout\}
-\end{quote}
+displaying different kinds of data.
+\end{callout}
 
 To show what concept maps look like, consider this simple \texttt{for}
 loop in Python:
@@ -262,27 +257,24 @@ the relationships in your partner's map do you consider concepts and
 vice versa?
 \end{challenge}
 
-\begin{quote}
-\subsection{Building Concept Maps
-Together}\label{building-concept-maps-together}
+\begin{callout}{Building Concept Maps Together}{callout:building-concept-maps-together}
 
 Concept maps can be used as a classroom discussion exercise. Put
 learners in small groups (2-4 people each), give each group some sticky
 notes on which a few key concepts are written, and have them build a
 concept map on a whiteboard by placing those sticky notes, connecting
 them with labelled arcs, and adding any other concepts they think they
-need. \{: .callout\}
-\end{quote}
+need.
+\end{callout}
 
-\begin{quote}
-\subsection{What Are We Doing Again?}\label{what-are-we-doing-again}
+\begin{callout}{What Are We Doing Again?}{callout:what-are-we-doing-again}
 
 Concept maps can also be used to help build a shared understanding of
 what a project is trying to accomplish. Everyone independently draws a
 concept map to show what they think the project's goals and constraints
 are. Those concept maps are then revealed simultaneously. The ensuing
-discussion can be\ldots{}vigorous. \{: .callout\}
-\end{quote}
+discussion can be\ldots{}vigorous.
+\end{callout}
 
 \subsection{Seven Plus or Minus Two}\label{seven-plus-or-minus-two}
 
@@ -333,8 +325,7 @@ form the
 \href{https://en.wikipedia.org/wiki/Serial\_position\_effect}{memory
 serial position effect}.
 
-\begin{quote}
-\subsection{Chunking}\label{chunking}
+\begin{callout}{Chunking}{callout:chunking}
 
 Our minds can store larger numbers of facts in short-term memory by
 creating \emph{chunks}. For example, most of us will remember a word we
@@ -342,8 +333,8 @@ read as a single item, rather than as a sequence of letters. Similarly,
 the pattern made by five spots on cards or dice is remembered as a whole
 rather than as five separate pieces of information. Chunks allow us to
 manage larger problems, but can also mislead us if we mis-identify
-something, i.e., see it as something it isn't. \{: .callout\}
-\end{quote}
+something, i.e., see it as something it isn't.
+\end{callout}
 
 7±2 is probably the most important number in programming. When someone
 is trying to write the next line of a program, or understand what's
