--- a/motivation.tex
+++ b/motivation.tex
@@ -28,8 +28,7 @@ belong in this course.
 \caption{What to Teach}
 \end{figure}
 
-\begin{quote}
-\subsection{Actual Time}\label{actual-time}
+\begin{callout}{Actual Time}{callout:actual-time}
 
 Any useful estimate of how long something takes to master must take into
 account how frequent failures are and how much time is lost to them. For
@@ -38,8 +37,8 @@ graphical editors save things to the user's desktop or home directory.
 If people need to run shell commands on the files they've edited, a
 substantial fraction won't be able to navigate to the right directory
 without help. If this seems like a small problem to you, please revisit
-the discussion of expert blind spot \secref{sec:memory}. \{: .callout\}
-\end{quote}
+the discussion of expert blind spot \secref{sec:memory}.
+\end{callout}
 
 Many of the foundational concepts of computer science, such as
 computability, inhabit the ``useful but hard to learn'' corner of the
@@ -88,8 +87,7 @@ someone saying that we \emph{shouldn't} identify and reward what we
 value---but it's useful to check lessons against these points to make
 sure they're doing at least a few of these things.
 
-\begin{quote}
-\subsection{Provide an Example}\label{provide-an-example}
+\begin{callout}{Provide an Example}{callout:provide-an-example}
 
 Insert a personal story here about how you establish value in the
 classroom. Or, use Rayna's personal story, which goes like this: In the
@@ -101,9 +99,8 @@ produce a ranked list of the most abundant sequences. I emphasize that
 the students just learned each of the pieces (see
 \href{https://wikis.utexas.edu/display/bioiteam/Scott's list of linux one-liners}).
 This way, I connect my bioinformatics users with domain-specific
-examples using an authentic task that is relevant to their research. \{:
-.callout\}
-\end{quote}
+examples using an authentic task that is relevant to their research.
+\end{callout}
 
 \begin{challenge}{Brainstorming Motivational Strategies}{chal:brainstorming-motivational-strategies}
 
@@ -113,15 +110,14 @@ past, and identify one thing the instructor did that motivated you.
 \emph{Share} the motivational story in the Etherpad.
 \end{challenge}
 
-\begin{quote}
-\subsection{Not Just Learners}\label{not-just-learners}
+\begin{callout}{Not Just Learners}{callout:not-just-learners}
 
 What's missing from this list is strategies to motivate the
 \emph{instructor}. As we said in \secref{sec:intro},
 learners respond to an instructor's enthusiasm, and instructors need to
 care about a topic in order to keep teaching it, particularly when they
-are volunteers. \{: .callout\}
-\end{quote}
+are volunteers.
+\end{callout}
 
 \begin{challenge}{Why Do You Teach?}{chal:why-do-you-teach}
 
@@ -149,9 +145,7 @@ the losing end). Finally, a ``holier-than-thou'' or contemptuous
 attitude from an instructor is a quick way to alienate a classroom and
 cause learners to tune out.
 
-\begin{quote}
-\subsection{Things You Shouldn't Do in a
-Workshop}\label{things-you-shouldnt-do-in-a-workshop}
+\begin{callout}{Things You Shouldn't Do in a Workshop}{callout:things-you-shouldnt-do-in-a-workshop}
 
 \begin{itemize}
 \item
@@ -182,25 +176,21 @@ Workshop}\label{things-you-shouldnt-do-in-a-workshop}
   teaching, that they are in the wrong place, and it may prevent them
   from asking questions in the future. (This idea is due to the Recurse
   Center's \href{https://www.recurse.com/manual\#sec-environment}{Social
-  Rules}). \{: .callout\}
+  Rules}).
 \end{itemize}
-\end{quote}
+\end{callout}
 
-\begin{quote}
-\subsection{The Importance of Having
-Rules}\label{the-importance-of-having-rules}
+\begin{callout}{The Importance of Having Rules}{callout:the-importance-of-having-rules}
 
 Software Carpentry and Data Carpentry share a
 Code of Conduct, and all
 participants in our workshops are required to abide by it. Its details
 are important, but the most important thing about it is that it exists:
 knowing that we have rules tells people a great deal about our values
-and about what kind of learning experience they can expect. \{:
-.callout\}
-\end{quote}
+and about what kind of learning experience they can expect.
+\end{callout}
 
-\begin{quote}
-\subsection{Stereotype Threat}\label{stereotype-threat}
+\begin{callout}{Stereotype Threat}{callout:stereotype-threat}
 
 Reminding people of negative stereotypes, even in subtle ways, makes
 them anxious about the risk of confirming those stereotypes, which in
@@ -230,8 +220,8 @@ need to aovid thinking in terms of a deficit model (i.e., we need to
 change the members of under-represented groups because they have some
 deficit, such as lack of prior experience) and instead use a systems
 approach (i.e., we need to change the system because it produces these
-disparities). \{: .callout\}
-\end{quote}
+disparities).
+\end{callout}
 
 \begin{challenge}{Brainstorming Demotivational Experiences}{chal:brainstorming-demotivational-experiences}
 
@@ -241,8 +231,7 @@ discuss what you could have done differently in the situation.
 \emph{Share} the demotivational story in the Etherpad.
 \end{challenge}
 
-\begin{quote}
-\subsection{Never Learn Alone}\label{never-learn-alone}
+\begin{callout}{Never Learn Alone}{callout:never-learn-alone}
 
 One way to support at-risk learners of all kinds is to have people sign
 up for workshops in small teams rather than as individuals. If an entire
@@ -251,8 +240,8 @@ closely-related) disciplines, everyone in the room will know in advance
 that they will be with at least a few people they trust, which increases
 the chances of them actually coming. It also helps after the workshop:
 if people come with their labmates, they can work together to implement
-what they've learned. \{: .callout\}
-\end{quote}
+what they've learned.
+\end{callout}
 
 \subsubsection{Impostor Syndrome}\label{impostor-syndrome}
 
@@ -344,8 +333,7 @@ clear that hosts and instructors care enough to have thought about
 problems in advance, and that any additional concerns are likely to be
 addressed.
 
-\begin{quote}
-\subsection{It Helps Everyone}\label{it-helps-everyone}
+\begin{callout}{It Helps Everyone}{callout:it-helps-everyone}
 
 \href{https://en.wikipedia.org/wiki/Curb\_cut}{Curb cuts} (the small
 sloped ramps joining a sidewalk to the street) were originally created
@@ -355,8 +343,8 @@ Similarly, steps taken to make lessons more accessible to people with
 various disabilities also help everyone else. Proper captioning of
 images, for example, doesn't just give screen readers something to say:
 it also makes the images more findable by exposing their content to
-search engines. \{: .callout\}
-\end{quote}
+search engines.
+\end{callout}
 
 The first step is to know what you need to do. The
 \href{http://www.w3.org/WAI/training/accessible}{W3C Accessibility
@@ -382,8 +370,7 @@ ask for advice, and updates to
 \href{http://software-carpentry.org/workshops/checklists/accessibility/}{our
 accessibility checklist} are always welcome.
 
-\begin{quote}
-\subsection{Every Little Bit Counts}\label{every-little-bit-counts}
+\begin{callout}{Every Little Bit Counts}{callout:every-little-bit-counts}
 
 Looking at people who work with disability and accessibility, it's easy
 to be overwhelmed by all the different ways we could make instruction
@@ -401,21 +388,18 @@ more accessible. \emph{Don't panic.} Instead:
   workshops more accessible that are both easy and don't create extra
   cognitive load for anyone: font choices, general text size, checking
   in advance that your room is accessible via an elevator or ramp, etc.
-  \{: .callout\}
 \end{itemize}
-\end{quote}
+\end{callout}
 
-\begin{quote}
-\subsection{Accessibility Testing}\label{accessibility-testing}
+\begin{callout}{Accessibility Testing}{callout:accessibility-testing}
 
 Find the nearest public transportation drop-off point to your building
 and walk from there to your office and then to the nearest washroom,
 making notes about things you think would be difficult for someone with
 mobility issues. Now borrow a wheelchair and repeat the journey. How
 complete was your list of challenges? And did you notice that the first
-sentence in this challenge assumed you could actually walk? \{:
-.callout\}
-\end{quote}
+sentence in this challenge assumed you could actually walk?
+\end{callout}
 
 \subsection{Inclusivity}\label{inclusivity}
 
