--- a/novice.tex
+++ b/novice.tex
@@ -125,8 +125,7 @@ set the stage for discussing functions. Explicitly referring back to
 pipes and filters shell when introducing functions helps solidify both
 ideas.
 
-\begin{quote}
-\subsection{Different Kinds of Lessons}\label{different-kinds-of-lessons}
+\begin{callout}{Different Kinds of Lessons}{callout:different-kinds-of-lessons}
 
 The cognitive differences between novices and competent practitioners
 underpin the differences between two kinds of teaching materials. A
@@ -147,8 +146,8 @@ Unix Programming Environment}} somehow managed to be good tutorials
 and Linux: Visual Quickstart Guide}} and Fehily's
 \emph{\href{http://www.amazon.com/SQL-Visual-QuickStart-Guide-3rd/dp/0321553578/}{SQL:
 Visual Quickstart Guide}} are among the few other books in computing to
-have accomplished this. \{: .callout\}
-\end{quote}
+have accomplished this.
+\end{callout}
 
 \subsection{Building Useful Mental
 Models}\label{building-useful-mental-models}
@@ -190,8 +189,7 @@ building of strong mental models, we're most interested in the middle
 category of misconceptions. While teaching, we want to expose broken
 models so that we can help diagnose and provide better ones.
 
-\begin{quote}
-\subsection{What Happens Next?}\label{what-happens-next}
+\begin{callout}{What Happens Next?}{callout:what-happens-next}
 
 An example of how solving problems can help people correct broken mental
 models, consider this problem from Epstein's
@@ -201,8 +199,8 @@ then filled the tub to the rim with water. When the ice melts, does the
 water level go up (so that the tub overflows), go down, or stay the
 same? The correct answer is that it stays the same; figuring out why
 helps people build a model of the relationship between weight, volume,
-and density. \{: .callout\}
-\end{quote}
+and density.
+\end{callout}
 
 \subsection{Assessing Mental Models}\label{assessing-mental-models}
 
@@ -310,8 +308,7 @@ to explain something that your learners already know. (Doing this also
 helps show learners that the instructor cares about how much they are
 learning.)
 
-\begin{quote}
-\subsection{Peer Instruction}\label{peer-instruction}
+\begin{callout}{Peer Instruction}{callout:peer-instruction}
 
 No matter how good a teacher is, she can only say one thing at a time.
 How then can she clear up many different misconceptions in a reasonable
@@ -358,9 +355,8 @@ solidify their understanding.
 Peer instruction is essentially a way to provide one-to-one mentorship
 in a scalable way. Despite this, we usually do not use it in our
 workshops because it takes people time to learn a new way to
-learn---time that we don't have in our compressed two-day format. \{:
-.callout\}
-\end{quote}
+learn---time that we don't have in our compressed two-day format.
+\end{callout}
 
 \begin{challenge}{Modeling Novice Mental Models}{chal:modeling-novice-mental-models}
 
@@ -369,8 +365,7 @@ and explain the diagnostic power of each its distractors, i.e., what
 misconception is each distractor meant to identify?
 \end{challenge}
 
-\begin{quote}
-\subsection{A Note on MCQ Design}\label{a-note-on-mcq-design}
+\begin{callout}{A Note on MCQ Design}{callout:a-note-on-mcq-design}
 
 \begin{itemize}
 \item
@@ -383,13 +378,11 @@ misconception is each distractor meant to identify?
   When you are trying to come up with distractors, think about questions
   that learners asked or problems they had the last time you taught this
   subject. If you haven't taught it before, think about your own
-  misconceptions or ask colleagues about their experiences. \{:
-  .callout\}
+  misconceptions or ask colleagues about their experiences.
 \end{itemize}
-\end{quote}
+\end{callout}
 
-\begin{quote}
-\subsection{Concept Inventories}\label{concept-inventories}
+\begin{callout}{Concept Inventories}{callout:concept-inventories}
 
 The \href{https://en.wikipedia.org/wiki/Force\_Concept\_Inventory}{Force
 Concept Inventory} is a set of MCQs designed to gauge understanding of
@@ -398,8 +391,8 @@ respondents, correlating their misconceptions with patterns of right and
 wrong answers to questions, and then improving the questions, it's
 possible to construct a very precise diagnostic tool. However, it's very
 costly to do this, and students' ability to search for answers on the
-internet is an ever-increasing threat to its validity. \{: .callout\}
-\end{quote}
+internet is an ever-increasing threat to its validity.
+\end{callout}
 
 Designing an MCQ with plausible distractors is useful even if it is
 never used in class because it forces the instructor to think about the
@@ -407,9 +400,7 @@ learners' mental models and how they might be broken---in short, to put
 themselves into the learners' heads and see the topic from their point
 of view.
 
-\begin{quote}
-\subsection{Why We Don't Assess During
-Registration}\label{why-we-dont-assess-during-registration}
+\begin{callout}{Why We Don't Assess During Registration}{callout:why-we-dont-assess-during-registration}
 
 Unfortunately, most formal educational systems train people to treat all
 assessment as summative, i.e., to think of every interaction with a
@@ -420,8 +411,8 @@ material. We send this questionnaire out after people have registered
 rather than making it part of the sign-up process because when we did
 the latter, many people concluded that since they couldn't answer all
 the questions, they shouldn't enrol. We were therefore scaring off many
-of the people we most wanted to help. \{: .callout\}
-\end{quote}
+of the people we most wanted to help.
+\end{callout}
 
 \begin{discussion}{Other Kinds of Formative Assessment}{disc:other-kinds-of-formative-assessment}
 
