--- a/performance.tex
+++ b/performance.tex
@@ -169,8 +169,7 @@ classroom layouts. Positive student feedback is taken as strong evidence
 by faculty that they should continue a practice.
 \end{quote}
 
-\begin{quote}
-\subsection{Learning Sideways}\label{learning-sideways}
+\begin{callout}{Learning Sideways}{callout:learning-sideways}
 
 The phrase \emph{lateral knowledge transfer} is sometimes used to
 describe what happens when someone intended to teach one thing, but
@@ -178,9 +177,8 @@ their audience learned another along the way. For example, an instructor
 might set out to show people how to do a particular statistical analysis
 in R, but what her learners might take away is some new keyboard
 shortcuts in R Studio. Live coding makes this much more likely because
-it allows learners to see the ``how'' as well as the ``what''. \{:
-.callout\}
-\end{quote}
+it allows learners to see the ``how'' as well as the ``what''.
+\end{callout}
 
 \begin{challenge}{Giving Feedback}{chal:giving-feedback}
 
