--- a/practices.tex
+++ b/practices.tex
@@ -25,8 +25,7 @@ are. We also have not yet done the follow-up to see whether the
 questionnaires' categorization of learners matches their actual in-class
 proficiency.
 
-\begin{quote}
-\subsection{You Can't Just Ask}\label{you-cant-just-ask}
+\begin{callout}{You Can't Just Ask}{callout:you-cant-just-ask}
 
 Instead of asking people how easily they could complete specific tasks,
 we could just ask them to rate their knowledge of various subjects on a
@@ -34,8 +33,8 @@ scale from 1 to 5. However, self-assessments of this kind are usually
 inaccurate because of the
 \href{https://en.wikipedia.org/wiki/Dunning\%E2\%80\%93Kruger\_effect}{Dunning-Kruger
 effect}: the less people know about a subject, the less accurate their
-estimate of their knowledge is. \{: .callout\}
-\end{quote}
+estimate of their knowledge is.
+\end{callout}
 
 That said, there \emph{are} things we can do:
 
@@ -222,8 +221,7 @@ sure that you are properly motivating (and not de-motivating) your
 students is another. In our next module, we will talk in more detail
 about what we can do to support motivation in our learners.
 
-\begin{quote}
-\subsection{Why Not a MOOC?}\label{why-not-a-mooc}
+\begin{callout}{Why Not a MOOC?}{callout:why-not-a-mooc}
 
 Many learners find it difficult to get to a workshop, either because
 there isn't one locally or because it's difficult to schedule time
@@ -255,5 +253,5 @@ remote instruction, in which the learners are co-located at one (or a
 few) sites, with helpers present, while the instructor(s) teaching via
 online video. This model has worked well for this instructor training
 course, and for a handful of regular workshops, but more work is needed
-to figure out its pros and cons. \{: .callout\}
-\end{quote}
+to figure out its pros and cons.
+\end{callout}
