--- a/terms.tex
+++ b/terms.tex
@@ -51,8 +51,7 @@ context. We then depend on the cognitivist perspective to drive
 \emph{how} we teach the specific content associated with the community
 of practice.
 
-\begin{quote}
-\subsection{Other Perspectives}\label{other-perspectives}
+\begin{callout}{Other Perspectives}{callout:other-perspectives}
 
 There are many other perspectives outside cognitivist theory---see
 \href{http://www.learning-theories.com/}{this site} for summaries.
@@ -64,8 +63,8 @@ process during which learners construct knowledge for themselves),
 particularly those made possible by the Internet), and
 \emph{connectionism}, a cognitivist theory that explains learning as
 creating connections between concepts. And yes, it would help if their
-names were less similar\ldots{} \{: .callout\}
-\end{quote}
+names were less similar\ldots{}
+\end{callout}
 
 \subsubsection{Instructional Design}\label{instructional-design}
 
@@ -118,8 +117,7 @@ Finally, this training includes times for discussion, observation, and
 feedback, precisely so that participants are able to share their PCK
 with each other over the course of the next two days.
 
-\begin{quote}
-\subsection{Examples of PCK}\label{examples-of-pck}
+\begin{callout}{Examples of PCK}{callout:examples-of-pck}
 
 \begin{itemize}
 \item
@@ -128,9 +126,9 @@ with each other over the course of the next two days.
   is full of PCK for teaching introductory statistics.
 \item
   The \href{http://csteachingtips.org/}{CS Teaching Tips} site is
-  gathering similar ideas for computing. \{: .callout\}
+  gathering similar ideas for computing.
 \end{itemize}
-\end{quote}
+\end{callout}
 
 \subsection{Myths and Pseudoscience}\label{myths-and-pseudoscience}
 
@@ -191,8 +189,7 @@ convinced themselves that they just don't have what it takes to be
 programmers. If all we do is dispel that belief, we will have done them
 a service.
 
-\begin{quote}
-\subsection{Key Readings}\label{key-readings}
+\begin{callout}{Key Readings}{callout:key-readings}
 
 An excellent overview of research results in education and learning is
 Ambrose et al's
@@ -209,8 +206,8 @@ Guzdial's
 ``Why Programming is Hard to Teach'' \cite{bib:guzdial-hard} and
 ``Top 10 Myths About Teaching Computer Science'' \cite{bib:guzdial-top10},
 and Porter et al's ``Success in Introductory Programming: What Works?'' \cite{bib:porter-what-works},
-all of which you should read before starting this class. \{: .callout\}
-\end{quote}
+all of which you should read before starting this class.
+\end{callout}
 
 \begin{discussion}{Three Kinds of Knowledge}{disc:three-kinds-of-knowledge}
 
