--- a/welcome.tex
+++ b/welcome.tex
@@ -88,94 +88,86 @@ motivate the activities and how you communicate with the attendees.
 
 \begin{discussion}{Background}{disc:background}
 
-\emph{Have you ever participated in a Software Carpentry or Data
-Carpentry Workshop?}
-
 \begin{enumerate}
-\item
-  Yes, I have taken a workshop.
-\item
-  Yes, I have been a workshop helper.
-\item
-  Yes, I organized a workshop.
-\item
-  No, but I am familiar with what is taught at a workshop.
-\item
-  No, and I am not familiar with what is taught at a workshop.
-\end{enumerate}
 
-\emph{Which of these most accurately describes your teaching
-experience?}
+\item
+  Have you ever participated in a Software Carpentry or Data Carpentry Workshop?
 
-\begin{enumerate}
-\item
-  I have been a graduate or undergraduate teaching assistant for a
-  university/college course.
-\item
-  I have not had any teaching experience in the past.
-\item
-  I have taught a seminar, workshop, or other short or informal course.
-\item
-  I have been the instructor-of-record for my own university/college
-  course.
-\item
-  I have taught at the K-12 level.
-\end{enumerate}
+  \begin{enumerate}
+  \item
+    Yes, I have taken a workshop.
+  \item
+    Yes, I have been a workshop helper.
+  \item
+    Yes, I organized a workshop.
+  \item
+    No, but I am familiar with what is taught at a workshop.
+  \item
+    No, and I am not familiar with what is taught at a workshop.
+  \end{enumerate}
 
-\emph{Which of these questions assesses flaws in a student's mental
-model of a domain?}
+\item
+  Which of these most accurately describes your teaching experience?
 
-\begin{enumerate}
-\item
-  I'm not sure what a mental model is.
-\item
-  ``In Python, what is the expected output for the following statement:
-  1 + `2'\,''
-\end{enumerate}
+  \begin{enumerate}
+  \item
+    I have been a graduate or undergraduate teaching assistant for a
+    university/college course.
+  \item
+    I have not had any teaching experience in the past.
+  \item
+    I have taught a seminar, workshop, or other short or informal course.
+  \item
+    I have been the instructor-of-record for my own university/college
+    course.
+  \item
+    I have taught at the K-12 level.
+  \end{enumerate}
 
-\begin{enumerate}
 \item
-  `12'
-\item
-  TypeError
-\item
-  `3'
-\item
-  3
-\end{enumerate}
+  Which of these questions assesses flaws in a student's mental model of a domain?
 
-\begin{enumerate}
-\setcounter{enumi}{2}
-\item
-  ``Rate your experience with the R programming language.''
-\end{enumerate}
-
-\begin{enumerate}
-\item
-  never used it
-\item
-  beginner
-\item
-  intermediate
-\item
-  expert
-\end{enumerate}
-
-\begin{enumerate}
-\setcounter{enumi}{3}
-\item
-  ``What does the Unix command `cut' do?''
-\end{enumerate}
-
-\begin{enumerate}
-\item
-  Extracts sections from each line of input.
-\item
-  Sorts fields of a line
-\item
-  Searches the input file for lines containing a match to a pattern
-\item
-  Removes a given input from a line
+  \begin{enumerate}
+  \item
+    I'm not sure what a mental model is.
+  \item
+    ``In Python, what is the expected output for the following statement:
+    1 + `2'\,''
+    \begin{enumerate}
+    \item
+      `12'
+    \item
+      TypeError
+    \item
+      `3'
+    \item
+      3
+    \end{enumerate}
+  \item
+    ``Rate your experience with the R programming language.''
+    \begin{enumerate}
+    \item
+      never used it
+    \item
+      beginner
+    \item
+      intermediate
+    \item
+      expert
+    \end{enumerate}
+  \item
+    ``What does the Unix command `cut' do?''
+    \begin{enumerate}
+    \item
+      Extracts sections from each line of input.
+    \item
+      Sorts fields of a line
+    \item
+      Searches the input file for lines containing a match to a pattern
+    \item
+      Removes a given input from a line
+    \end{enumerate}
+  \end{enumerate}
 \end{enumerate}
 
 \end{discussion}
